<resources>
    <string name="app_name">Profit model</string>
    <string name="product">Махсулот номи</string>
    <string name="title_activity_login">Тизимга кириш</string>
    <string name="password">Парол</string>
    <string name="action_sign_in">Кириш</string>
    <string name="invalid_username">Логин хато</string>
    <string name="username">Логин</string>
    <string name="invalid_password">Логин йоки парол хато !!!</string>
    <string name="ip_input">IP адресни киритинг</string>
    <string name="btn">Button</string>
</resources>
